// Copyright (c) 2020 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";
package stakingpb;

import "google/protobuf/timestamp.proto";

message Bucket {
  string candidateAddress = 1;
  string stakedAmount = 2;
  uint32 stakedDuration = 3;
  google.protobuf.Timestamp createTime = 4;
  google.protobuf.Timestamp stakeStartTime = 5;
  google.protobuf.Timestamp unstakeStartTime = 6;
  bool autoStake = 7;
  string owner = 8;
}

message BucketIndex {
    uint64 index = 1;
    string candAddress = 2;
}

message BucketIndices {
    repeated BucketIndex indices = 1;
}

message Delegate {
    string owner = 1;
    string address = 2;
    string rewardAddress = 3;
    bytes canName = 4;
    bytes votes = 5;
    bytes selfStake = 6;
    bool active = 7;
}

message Delegates {
    repeated Delegate delegates = 1;
}
